# TriCrossField

./: .gitmodules  CMakeLists.txt  README.md  demo.cpp  gear.feature  gear.rosy  tcf_basic_types.h  tcf_interface.h  tcf_internal.cpp  tcf_linear_system.cpp  tcf_linear_system.h
